# luci

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  LANG.md  Makefile  Makefile.graph  Makefile.old  README.md  README.rst  TODO.md  TODO.rst  ast.c  ast.h  astexec.c  astexec.h  build.sh  driver.c  env.c  env.h  env.old.c  example.lx  funcs.rst  functions.c  functions.h  index.html  lexer.l  old.Makefile  params.json  parser.h  parser.tab.h  parser.y  symbol.c  symbol.h  types.h
etc/vim/ftdetect/: luci.vim
etc/vim/syntax/: luci.vim
notes/: functions.rst  garbage.txt  kvtable.rst  syntax.rst
samples/: copying.lx  crazy.lx  error.lx  fastfib.lx  fib.lx  fib2.lx  file_io.lx  for_loops.lx  functions.lx  global.lx  if_else.lx  input.lx  insane.lx  iteration.lx  lists.lx  maps.lx  misc.lx  nested.lx  nice.lx  nuts.lx  primitives.lx  range.lx  rawinput.lx  rough.lx  simple.lx  simple0.lx  simple1.lx  simple2.lx  simple3.lx  simple4.lx  test.lx  tough.lx  tough0.lx  wild.lx
samples/data/: test1.txt  test2.txt
src/: CMakeLists.txt  Doxyfile.in  Makefile  ast.c  ast.h  binop.c  binop.h  builtin.c  builtin.h  common.c  common.h  compile.c  compile.h  constant.c  constant.h  dispatch.h  driver.c  driver.h  env.c  env.h  filetype.c  filetype.h  floattype.c  floattype.h  functions.c  functions.h  functiontype.c  functiontype.h  gc.c  gc.h  interpret.c  interpret.h  inttype.c  inttype.h  iteratortype.c  iteratortype.h  lexer.l  lexer.yy.c  listtype.c  listtype.h  (+26 more)
tests/: CMakeLists.txt  assert.lx  builtins.lx  floats.lx  ints.lx  lists.lx  strings.lx
tests/system/: 1.lx  README.rst
tests/unit/: README.rst
tools/: allocator_analysis.py  bitflags_performance.py
